<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:logo="@color/red_bg"
            app:navigationIcon="@android:drawable/ic_menu_revert"
            app:navigationIconTint="@color/white"
            app:title="@string/choose_payment" />

        <!--            app:menu="@menu/top_app_bar"-->
        <!--            app:navigationIcon="@drawable/ic_menu_24dp"-->

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/paymentDetail"
                style="@style/main_title_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_payment" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/id_description"
                    style="@style/main_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/id_total_payment"
                    style="@style/main_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/id_description"
                    android:layout_marginVertical="10dp"
                    android:text="@string/total_payment" />

                <TextView
                    android:id="@+id/description_value"
                    style="@style/main_item_bold"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_toRightOf="@+id/id_description"
                    android:text="Deskripsi Value"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/total_payment_value"
                    style="@style/main_item_bold"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description_value"
                    android:layout_marginVertical="10dp"
                    android:text="Total Pembayaran Value"
                    android:textAlignment="textEnd" />
            </RelativeLayout>

            <TextView
                android:id="@+id/choosePayment"
                style="@style/main_title_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/choose_payment_method" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scrollbars="vertical"
                android:fillViewport="true"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_method_payment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="30dp"
                    tools:listitem="@layout/row_method_payment" />

            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_next"
                style="@style/main_title_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>