<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8540F5">

    <!-- Pattern at the Bottom -->
    <include
        layout="@layout/bg_pattern"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:src="@drawable/ic_success" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_amount"
                    style="@style/big_title_bold_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Rp. 5000.00000 Terkirim" />

<!--                <TextView-->
<!--                    android:id="@+id/tv_sent"-->
<!--                    style="@style/big_title_bold_white"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:text=" Terkirim" />-->
            </LinearLayout>

            <!--        Tanggal dan Pembayaran -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_date_title"
                    style="@style/main_item_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_payment_title"
                    style="@style/main_item_regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/payment"
                    android:textColor="@color/white" />
            </LinearLayout>

            <!--        Value Tanggal dan Pembayaran-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_date"
                    style="@style/main_item_bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="23-08-2024"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_payment"
                    style="@style/main_item_bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TUNAI"
                    android:textColor="@color/white" />
            </LinearLayout>

            <!--        Garis -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginVertical="20dp"
                android:layerType="software"
                android:src="@drawable/white_dotted" />

            <!--        Deksripsi dan Value-->

            <TextView
                android:id="@+id/tv_description_title"
                style="@style/main_item_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Deskripsi"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_description"
                style="@style/main_item_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. "
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_print"
                style="@style/main_item_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@android:drawable/ic_menu_save"
                android:text="@string/print_payment"
                android:textColor="#8540F5" />

            <Button
                android:id="@+id/btn_back"
                style="@style/main_item_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:drawableLeft="@android:drawable/ic_menu_revert"
                android:text="@string/back_to_home"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/tv_mkp"
                style="@style/main_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/powered_by_mkp_mobile"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="8sp" />

        </LinearLayout>


    </LinearLayout>



</FrameLayout>